# Sworn

./: .gitignore  ACCURACY.md  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
adversarial/: README.md
adversarial/forged_invocation_id/: finding.json
adversarial/hash_swap/: finding.template.json
adversarial/poisoned_evtx/: example.txt
adversarial/single_family/: finding.template.json
corpus/: README.md
corpus/known_bad/findevil_sample_case/: README.md  download.sh  ground_truth.json
corpus/known_good/clean_win10_baseline/: README.md  download.sh  ground_truth.json
docs/: architecture.drawio  demo-script.md  devpost-description.md  evidence-integrity.md  regulatory-mappings.md  threat-model.md  try-it-out.md  whats-next.md
eval/: __init__.py  harness.py  metrics.py  negative_control.py
install/: Dockerfile  install.sh
sworn/: __init__.py  cli.py  orchestration.py
sworn/agents/: __init__.py  loop.py  specialists.py
sworn/corroboration/: __init__.py
sworn/findings/: __init__.py  schema.py
sworn/gateway/: __init__.py  constraint.py  evidence.py  ledger.py  provenance.py  server.py  session.py
sworn/injection_defense/: __init__.py  sanitize.py
sworn/tools/: __init__.py  _base.py  bulk_extractor.py  evtx.py  hindsight.py  mft.py  pecmd.py  plaso.py  registry.py  regripper.py  sleuthkit.py  volatility.py  yara.py
sworn/writeback/: __init__.py  thehive.py
tests/: test_adversarial.py  test_cli_findings.py  test_constraint.py  test_corroboration.py  test_eval_metrics.py  test_evidence_registry.py  test_findings_schema.py  test_ledger.py  test_orchestration.py  test_sanitize.py  test_self_correction.py  test_thehive_writeback.py  test_tool_unavailable.py
