[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sworn"
version = "0.1.0"
description = "Signed Workflow Of Reasoned Narratives. A Custom MCP gateway for Protocol SIFT."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Jonathan", email = "hello@n2.help" }]
keywords = ["dfir", "incident-response", "mcp", "sift", "forensics", "ai-security"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.5",
  "cryptography>=42.0",
  "click>=8.1",
  "structlog>=24.1",
  "anyio>=4.2",
  "rich>=13.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
]
eval = [
  "scikit-learn>=1.4",
  "pandas>=2.2",
]
writeback = [
  "thehive4py>=2.0",
]

[project.scripts]
sworn = "sworn.cli:main"

[project.urls]
Homepage = "https://github.com/JonathanSolvesProblems/Sworn"
Issues = "https://github.com/JonathanSolvesProblems/Sworn/issues"
Hackathon = "https://findevil.devpost.com/"

[tool.setuptools.packages.find]
where = ["."]
include = ["sworn*"]
exclude = ["tests*", "corpus*", "adversarial*", "docs*", "install*", "examples*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "C4", "RUF"]
ignore = ["S101", "S603", "S607"]  # asserts in tests; subprocess by design

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
